Add hosted app menu button to tabbable focus cycle

This CL enables users to tab to the hosted app menu button in hosted app
windows from the web contents.

The related browser test has been updated with secure site navigation to
add coverage for PWA hosted app windows.

Screencast: https://bugs.chromium.org/p/chromium/issues/attachment?aid=345540&signed_aid=5deNZnjPxp-be66iybEtaw==&inline=1

Bug: 839180
Change-Id: Ibf4b4dab6bd6b4c5d721a9a2200477a56e4644a7
Reviewed-on: https://chromium-review.googlesource.com/1114401
Commit-Queue: Alan Cutter <alancutter@chromium.org>
Reviewed-by: Allen Bauer <kylixrd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571002}
Former-commit-id: b1f341badeb00de2dd1c1674332fcb0c5a910274