chrome/browser/ui/views/frame/hosted_app_menu_button.cc
@@ -26,6 +26,7 @@ HostedAppMenuButton::HostedAppMenuButton(BrowserView* browser_view)
   SetInkDropMode(InkDropMode::ON);
   // Disable focus ring for consistency with sibling buttons and AppMenuButton.
   SetFocusPainter(nullptr);
+  SetFocusBehavior(FocusBehavior::ALWAYS);
   // Avoid the native theme border, which would crop the icon (see
   // https://crbug.com/831968).
   SetBorder(nullptr);
